methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:11: error: not found: value levebrosse
  levebrosse()
  ^PictureMono1:14: error: not found: value baissebrosse
  baissebrosse()
  ^