methods.picture.PictureMono1.scala.code
def faireV() {
  avance()
  baisseBrosse()
  avance()
  leveBrosse()
  gauche()
  avance()
  droite()
  baisseBrosse()
  avance()
  levebrosse()
  avance()
  droite()
  baissebrosse()
  avance()
  leveBrosse()
  gauche()
  avance()
  avance()
  gauche()
}